@@ -47,8 +47,8 @@
 #include <debug.h>
 #include <errno.h>
 
-#include <nuttx/nx.h>
-#include <nuttx/nxtk.h>
+#include <nuttx/nx/nx.h>
+#include <nuttx/nx/nxtk.h>
 #include "nx_internal.h"
 
 /****************************************************************************
