@@ -1,7 +1,7 @@
 /****************************************************************************
  * examples/nx/nx_internal.h
  *
- *   Copyright (C) 2008-2010 Gregory Nutt. All rights reserved.
+ *   Copyright (C) 2008-2011 Gregory Nutt. All rights reserved.
  *   Author: Gregory Nutt <spudmonkey@racsa.co.cr>
  *
  * Redistribution and use in source and binary forms, with or without
@@ -45,8 +45,8 @@
 #include <stdint.h>
 #include <stdbool.h>
 #include <semaphore.h>
-#include <nuttx/nx.h>
-#include <nuttx/nxtk.h>
+#include <nuttx/nx/nx.h>
+#include <nuttx/nx/nxtk.h>
 
 /****************************************************************************
  * Definitions
