@@ -47,9 +47,9 @@
 #include <debug.h>
 #include <errno.h>
 
-#include <nuttx/nx.h>
-#include <nuttx/nxtk.h>
-#include <nuttx/nxfonts.h>
+#include <nuttx/nx/nx.h>
+#include <nuttx/nx/nxtk.h>
+#include <nuttx/nx/nxfonts.h>
 
 #include "nx_internal.h"
 
