@@ -59,9 +59,9 @@
 #endif
 
 #include <nuttx/arch.h>
-#include <nuttx/nx.h>
-#include <nuttx/nxglib.h>
-#include <nuttx/nxfonts.h>
+#include <nuttx/nx/nx.h>
+#include <nuttx/nx/nxglib.h>
+#include <nuttx/nx/nxfonts.h>
 
 #include "nximage.h"
 
