@@ -47,8 +47,8 @@
 #include <errno.h>
 #include <debug.h>
 
-#include <nuttx/nx.h>
-#include <nuttx/nxfonts.h>
+#include <nuttx/nx/nx.h>
+#include <nuttx/nx/nxfonts.h>
 
 #include "nxtext_internal.h"
 
